better responsive behavior

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -23,6 +23,12 @@
   </nav>
 
   <div class="row">
+    <div class="col-12">
+      <h1 class="activity-summary-heading">Activity Summary</h1>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-6">
       <div class="doughnutChartBox animated fadeIn">
         <h2 class="stat-title">Dream Types</h2>
