added shadow to nav

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -24,7 +24,7 @@
 
   <div class="row">
     <div class="col-12">
-      <h1 class="activity-summary-heading">Activity Summary</h1>
+      <h1 class="activity-summary-heading animated fadeIn">Activity Summary</h1>
     </div>
   </div>
 
