--- a/public/dreams.html
+++ b/public/dreams.html
@@ -25,7 +25,7 @@
 
 	<div class="row">
 		<div class="col-12">
-			<h1 class="page-title">Dream Collection</h1>
+			<h1 class="page-title animated fadeIn">Dream Collection</h1>
 			<div class="main-container">
 				<dl class="accordion animated fadeIn">
 				</dl>
