edit link now redirects to dream-edit.html

--- a/public/dream-edit.html
+++ b/public/dream-edit.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
   <link rel="stylesheet" type="text/css" href="new-dream.css">
   <link rel="stylesheet" type="text/css" href="grid.css">
+  <link rel="stylesheet" type="text/css" href="animate.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +24,7 @@
 <div class="row">
   <div class="col-12">
     <div class="main-container">
-      <form class="new-dream-form" action="/dreams/new" method="post">
+      <form class="new-dream-form animated fadeIn" action="/dreams/new" method="post">
 
         <h1 class="title">Add New Dream</h1>
 
@@ -85,6 +86,6 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="dream-edit.js"></script>
+<!-- <script type="text/javascript" src="dream-edit.js"></script> -->
 </body>
 </html>
