placeholders for about div

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,6 @@
 					</form>
 				</div>
 				<i class="fa fa-times fa-lg modal-close" aria-hidden="true"></i>
-		<!--		<button type="button" class="modal-close">X</button> -->
 			</div>
 		</div>
 
@@ -51,7 +50,7 @@
 			<div class="row">
 				<div class="col-12">
 					<h1 id="title">DREAM WALKER</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget ipsum sed eros congue placerat. Curabitur lobortis, magna non rhoncus aliquam, sapien eros lobortis justo, eget auctor nibh est non erat.</p>
+					<p>Start lucid dreaming.</p>
 				</div>
 			</div>
 		</div>
@@ -62,10 +61,13 @@
 			<div id="about">
 				<div class="row">
 					<div class="col-12">
-						<h2>What is Dream Walker?</h2>
-						<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
-
-						Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
+						<div class="about-text">
+							<h2>Lucid dreaming</h2>
+							<p>is an experience in which you become aware that you’re dreaming and gain the ability to control your dreams. It allows you to transform your inner dream world into a playground of infinite possibility.</p>
+						</div>
+						<div class="about-img">
+							<img src="https://placehold.it/350x350">
+						</div>
 					</div>
 				</div>
 			</div>
