--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 			<div class="row">
 				<div class="col-12">
 					<h1 id="title">DREAM WALKER</h1>
-					<p>Start lucid dreaming.</p>
+					<p>Dream a bit.</p>
 				</div>
 			</div>
 		</div>
@@ -62,11 +62,11 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="about-text">
-							<h2>Lucid dreaming</h2>
-							<p>is an experience in which you become aware that you’re dreaming and gain the ability to control your dreams. It allows you to transform your inner dream world into a playground of infinite possibility.</p>
+							<h2>Experience lucid dreaming</h2>
+							<p>Dream Walker helps you become aware that you’re dreaming and gain the ability to control your dreams. You can transform your inner dream world into a playground of infinite possibility.</p>
 						</div>
 						<div class="about-img">
-							<img src="https://placehold.it/350x350">
+							<img src="images/dream-walker-astronaut.png" alt="dreaming-astronaut" class="astronaut">
 						</div>
 					</div>
 				</div>
@@ -77,10 +77,13 @@
 			<div id="journal">
 				<div class="row">
 					<div class="col-12">
-						<h2>Record Your Dreams</h2>
-						<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
-
-						Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
+						<div class="journal-img">
+							<img src="images/dream-walker-dreams-example.png" alt="dreams-example" class="dreams-example">
+						</div>
+						<div class="journal-text">
+							<h2>Record Your Dreams</h2>
+							<p>The key to lucid dreaming is to consistently document your dreams so that you can recognize patterns. Dream Walker provides you with a quick and simple interface that helps you keep track of what you're dreaming about.</p>
+						</div>
 					</div>
 				</div>
 			</div>
