added text and imgs for index page

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 							<img src="images/dream-walker-dreams-example.png" alt="dreams-example" class="dreams-example">
 						</div>
 						<div class="journal-text">
-							<h2>Record Your Dreams</h2>
+							<h2>Record your dreams</h2>
 							<p>The key to lucid dreaming is to consistently document your dreams so that you can recognize patterns. Dream Walker provides you with a quick and simple interface that helps you keep track of what you're dreaming about.</p>
 						</div>
 					</div>
@@ -93,10 +93,16 @@
 			<div id="analyze">
 				<div class="row">
 					<div class="col-12">
-						<h2>Analyze Your Dreams</h2>
-						<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
-
-						Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
+						<div class="analyze-text">
+							<h2>Keep track of your progress</h2>
+							<p>Interactive charts and personalized statistics help you on stay on track with your goals.</p>
+						</div>
+						<div class="analyze-img">
+							<img src="images/dream-walker-stats-example.png" alt="statistics-example" class="statistics-example">
+						</div>
+						<div class="sleep-img">
+							<img src="images/dream-walker-sleep-example.png" alt="sleep-chart-example" class="sleep-example">
+						</div>
 					</div>
 				</div>
 			</div>
