added style changes

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 			<div id="sign-up">
 				<div class="row">
 					<div class="col-12">
-						<h2>Become A Dream Walker</h2>
+						<h2 class="sign-up-title">Start Dreaming Now</h2>
 						<div class="sign-up-box">
 							<form class="register" action="/some-server-endpoint" method="post" autocomplete="off">
 								<fieldset name="register-info">
@@ -125,11 +125,14 @@
 						</div>
 					</div>
 				</div>
+				<footer>
+					<p>Built by Peter Kim <a href="https://github.com/NOUX-NOVA/dream-walker" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a></p>
+				</footer>
 			</div>
 		</section>
 
-
 	</main>
+
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
