--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,9 @@
 						</div>
 						<div class="journal-text">
 							<h2>Record your dreams</h2>
+							<div class="journal-img-mobile">
+								<img src="images/dream-walker-dreams-example.png" alt="dreams-example" class="dreams-example">
+							</div>
 							<p>The key to lucid dreaming is to consistently document your dreams so that you can recognize patterns. Dream Walker provides you with a quick and simple interface that helps you keep track of what you're dreaming about.</p>
 						</div>
 					</div>
@@ -95,6 +98,9 @@
 					<div class="col-12">
 						<div class="analyze-text">
 							<h2>Keep track of your progress</h2>
+							<div class="analyze-img-mobile">
+								<img src="images/dream-walker-stats-example.png" alt="statistics-example" class="statistics-example-mobile">
+							</div>
 							<p>Interactive charts and personalized statistics help you on stay on track with your goals.</p>
 						</div>
 						<div class="analyze-img">
