changed title text

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 			<div class="row">
 				<div class="col-12">
 					<h1 id="title">DREAM WALKER</h1>
-					<p>Dream a bit.</p>
+					<p>Start lucid dreaming</p>
 				</div>
 			</div>
 		</div>
