--- a/public/index.html
+++ b/public/index.html
@@ -124,9 +124,10 @@
 					<div class="col-12">
 						<h2 class="sign-up-title">Start Dreaming Now</h2>
 						<div class="sign-up-box">
-							<form class="register" action="/some-server-endpoint" method="post" autocomplete="off">
+							<form class="register" action="/users" method="post" autocomplete="off">
 								<fieldset name="register-info">
-									<input type="text" name="name" id="name" placeholder="Full Name" required/>
+									<input type="text" name="name" id="name" placeholder="First Name" required/>
+									<input type="text" name="name" id="name" placeholder="Last Name" required/>
 									<input type="text" name="username" id="username" placeholder="Username" required/>
 									<input type="password" name="password" id="password" placeholder="Password" required/>
 								</fieldset>
