successfully adds new users on local machine

--- a/public/index.html
+++ b/public/index.html
@@ -126,8 +126,8 @@
 						<div class="sign-up-box">
 							<form class="register" action="/users" method="post" autocomplete="off">
 								<fieldset name="register-info">
-									<input type="text" name="name" id="name" placeholder="First Name" required/>
-									<input type="text" name="name" id="name" placeholder="Last Name" required/>
+									<input type="text" name="name" id="firstName" placeholder="First Name" required/>
+									<input type="text" name="name" id="lastName" placeholder="Last Name" required/>
 									<input type="text" name="username" id="username" placeholder="Username" required/>
 									<input type="password" name="password" id="password" placeholder="Password" required/>
 								</fieldset>
