--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,9 +14,9 @@
 <body>
   <nav>
     <ul>
-      <a href="dashboard.html"><li>Dashboard</li></a>
-      <a href="dreams.html"><li>Dreams</li></a>
-      <a href="new-dream.html"><li>Add New Dream</li></a>
+      <a href="/dashboard"><li>Dashboard</li></a>
+      <a href="/dreams"><li>Dreams</li></a>
+      <a href="/dreams/new"><li>Add New Dream</li></a>
     </ul>
     <div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
   </nav>
