corrected routing for dreams/new

--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title></title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
-  <link rel="stylesheet" type="text/css" href="new-dream.css">
-  <link rel="stylesheet" type="text/css" href="grid.css">
-  <link rel="stylesheet" type="text/css" href="animate.css">
+  <link rel="stylesheet" type="text/css" href="/new-dream.css">
+  <link rel="stylesheet" type="text/css" href="/grid.css">
+  <link rel="stylesheet" type="text/css" href="/animate.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,6 +76,6 @@
   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="new-dream.js"></script>
+<script type="text/javascript" src="/new-dream.js"></script>
 </body>
 </html>
