--- a/public/dream-edit.html
+++ b/public/dream-edit.html
@@ -75,6 +75,6 @@
   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<!-- <script type="text/javascript" src="dream-edit.js"></script> -->
+<script type="text/javascript" src="dream-edit.js"></script>
 </body>
 </html>
