/dreams/:id successfully pulls in data

--- a/public/dream-edit.html
+++ b/public/dream-edit.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title></title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
-  <link rel="stylesheet" type="text/css" href="new-dream.css">
-  <link rel="stylesheet" type="text/css" href="grid.css">
-  <link rel="stylesheet" type="text/css" href="animate.css">
+  <link rel="stylesheet" type="text/css" href="/new-dream.css">
+  <link rel="stylesheet" type="text/css" href="/grid.css">
+  <link rel="stylesheet" type="text/css" href="/animate.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
     <div class="col-12">
       <div class="main-container">
         <form class="new-dream-form animated fadeIn" action="/dreams/new" method="post">
-          <h1 class="title">Add New Dream</h1>
+          <h1 class="title">Edit Dream</h1>
           <fieldset name="new-dream-input">
             <input placeholder="Dream Title" type="text" name="dream-title" id="dream-title" autocomplete="off" required />
             <textarea rows="15" class="dream-entry"></textarea>
@@ -75,6 +75,6 @@
   </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="dream-edit.js"></script>
+<script type="text/javascript" src="/dream-edit.js"></script>
 </body>
 </html>
