dream entry edit in progress

--- a/public/dream-edit.html
+++ b/public/dream-edit.html
@@ -24,7 +24,7 @@
   <div class="row">
     <div class="col-12">
       <div class="main-container">
-        <form class="new-dream-form animated fadeIn" action="/dreams/new" method="post">
+        <form class="new-dream-form animated fadeIn" action="#" method="post">
           <h1 class="title">Edit Dream</h1>
           <fieldset name="new-dream-input">
             <input placeholder="Dream Title" type="text" name="dream-title" id="dream-title" autocomplete="off" required />
