--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 		<div class="modal" id="log-in">
 			<div class="modal-container">
 				<div class="log-in-box">
-					<form class="login-form" action="/some-server-endpoint" method="post" autocomplete="off">
+					<form class="login-form" action="/users/login" method="post" autocomplete="off">
 						<fieldset name="login-info">
 							<input type="text" name="username" id="username" placeholder="Username" required/>
 							<input type="password" name="password" id="password" placeholder="Password" required/>
