demo work in progress

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 			<a href="#analyze"><li class="nav-left nav-hover">Analyze</li></a>
 			<a href="#sign-up"><li class="nav-left nav-hover">Sign Up</li></a>
 			<a href="#log-in"><li class="nav-right nav-hover log-in">Sign In</li></a>
-			<a href="/dashboard"><li class="nav-right nav-hover" id="demo-button">View Demo</li></a>
+			<a href="/dashboard?demo=true"><li class="nav-right nav-hover" id="demo-button">View Demo</li></a>
 		</ul>
 		<div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
 
