--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
 			<a href="#journal"><li class="nav-left nav-hover">Journal</li></a>
 			<a href="#analyze"><li class="nav-left nav-hover">Analyze</li></a>
 			<a href="#sign-up"><li class="nav-left nav-hover">Sign Up</li></a>
-			<a href="#log-in"><li class="nav-right nav-hover log-in">Sign In</li></a>
-			<a href="/dashboard?demo=true"><li class="nav-right nav-hover" id="demo-button">View Demo</li></a>
+			<a href="#log-in"><li class="nav-right nav-hover log-in" id="demo-button">Sign In / Demo Account</li></a>
+			<!-- <a href="/dashboard?demo=true"><li class="nav-right nav-hover" id="demo-button">Demo</li></a> -->
 		</ul>
 		<div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
 
@@ -27,13 +27,20 @@
 				<div class="log-in-box">
 
 					<form class="login-form" action="/users/login" method="post" autocomplete="off">
-						<h2>Sign in to Dream Walker</h2>
+						<h3>Thank you for using Dream Walker</h3>
+						<p>To access the demo account, please enter the follow credentials:<br><br>
+						Username: abc<br>
+						Password: 123
+						</p>
+						<p>or sign in with your existing account.</p>
+						<button type='submit' class="log-in-button">Sign In</button>
+						<p><em>If you're using the demo account, please be courteous to other users and try to limit offensive language when creating or editing dream entries. Thank you!</em></p>
+						<!-- <h2>Sign in to Dream Walker</h2>
 						<fieldset name="login-info">
 							<input type="text" name="username" id="username" placeholder="Username" required/>
 							<input type="password" name="password" id="password" placeholder="Password" required/>
-						</fieldset>
-						<button type='submit' class="log-in-button">Sign In</button>
-						<p>or<br><br><a href="#sign-up"><span class="sign-up-link">Create a new account</span></a></p>
+						</fieldset> -->
+						<!-- <p>or<br><br><a href="#sign-up"><span class="sign-up-link">Create a new account</span></a></p> -->
 					</form>
 					<!-- <p class="modal-close close-login">(Close)</p>
  -->				</div>
