changed logout link

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,7 +17,7 @@
       <a href="/dashboard"><li>Dashboard</li></a>
       <a href="/dreams"><li>Dreams</li></a>
       <a href="/dreams/new"><li>Add New Dream</li></a>
-      <a href="/users/logout"><li>Logout</li></a>
+      <a href="/logout"><li>Logout</li></a>
     </ul>
     <div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
   </nav>
