--- a/public/dream-edit.html
+++ b/public/dream-edit.html
@@ -18,7 +18,7 @@
       <a href="/dashboard"><li>Dashboard</li></a>
       <a href="/dreams"><li>Dreams</li></a>
       <a href="/dreams/new"><li>Add New Dream</li></a>
-      <a href="/users/logout"><li>Logout</li></a>
+      <a href="/logout"><li>Logout</li></a>
     </ul>
   </nav>
 
