--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,13 @@
 
 					<form class="login-form" action="/users/login" method="post" autocomplete="off">
 						<h3>Thank you for using Dream Walker</h3>
-						<p>To access the demo account, please enter the follow credentials:<br><br>
-						Username: abc<br>
-						Password: 123
+						<p>To access the demo account, please enter the follow credentials:</p>
+						<p class="demo-account">Username: <b>abc</b><br>
+						Password: <b>123</b>
 						</p>
 						<p>or sign in with your existing account.</p>
 						<button type='submit' class="log-in-button">Sign In</button>
+						<p class="sorry"><em>If you experience issues logging in to a different account, please open a private browser. Sorry for the inconvenience!</em></p>
 						<!-- <h2>Sign in to Dream Walker</h2>
 						<fieldset name="login-info">
 							<input type="text" name="username" id="username" placeholder="Username" required/>
@@ -41,8 +42,7 @@
 						</fieldset> -->
 						<!-- <p>or<br><br><a href="#sign-up"><span class="sign-up-link">Create a new account</span></a></p> -->
 					</form>
-					<!-- <p class="modal-close close-login">(Close)</p>
- -->				</div>
+					</div>
 				<i class="fa fa-times fa-lg modal-close" aria-hidden="true"></i>
 			</div>
 		</div>
