removed console logs

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,11 @@
 
 					<form class="login-form" action="/users/login" method="post" autocomplete="off">
 						<h3>Thank you for using Dream Walker</h3>
-						<p>To access the demo account, please enter the follow credentials:</p>
+						<p>To access the demo account, please enter the following credentials:</p>
 						<p class="demo-account">Username: <b>abc</b><br>
 						Password: <b>123</b>
 						</p>
+						<button type='submit' class="log-in-button">Sign In To Demo</button>
 						<p>or sign in with your existing account.</p>
 						<button type='submit' class="log-in-button">Sign In</button>
 						<p class="sorry"><em>If you experience issues logging in to a different account, please open a private browser. Sorry for the inconvenience!</em></p>
