--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 						<p class="demo-account">Username: <b>abc</b><br>
 						Password: <b>123</b>
 						</p>
-						<button type='submit' class="log-in-button">Sign In To Demo</button>
+						<button type='submit' class="log-in-button">Demo Account</button>
 						<p>or sign in with your existing account.</p>
 						<button type='submit' class="log-in-button">Sign In</button>
 						<p class="sorry"><em>If you experience issues logging in to a different account, please open a private browser. Sorry for the inconvenience!</em></p>
