--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Dream Journal">
+  <title>Dream Walker | Dream Journal for Lucid Dreaming</title>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
   <link rel="stylesheet" type="text/css" href="/new-dream.css">
   <link rel="stylesheet" type="text/css" href="/grid.css">
@@ -11,7 +13,6 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
